add signature to MLflow examples
Signed-off-by: Jerry Liang <jerry.liang@databricks.com>

--- a/examples/sklearn_elasticnet_wine/train.ipynb
+++ b/examples/sklearn_elasticnet_wine/train.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,6 +36,7 @@
     "    from sklearn.linear_model import ElasticNet\n",
     "\n",
     "    import mlflow\n",
+    "    from mlflow.models.signature import infer_signature\n",
     "    import mlflow.sklearn\n",
     "\n",
     "    import logging\n",
@@ -99,6 +101,10 @@
     "        print(\"  MAE: %s\" % mae)\n",
     "        print(\"  R2: %s\" % r2)\n",
     "\n",
+    "        # Infer model signature\n",
+    "        predictions = lr.predict(train_x)\n",
+    "        signature = infer_signature(train_x, predictions)\n",
+    "\n",
     "        # Log parameter, metrics, and model to MLflow\n",
     "        mlflow.log_param(\"alpha\", alpha)\n",
     "        mlflow.log_param(\"l1_ratio\", l1_ratio)\n",
@@ -106,7 +112,7 @@
     "        mlflow.log_metric(\"r2\", r2)\n",
     "        mlflow.log_metric(\"mae\", mae)\n",
     "\n",
-    "        mlflow.sklearn.log_model(lr, \"model\")"
+    "        mlflow.sklearn.log_model(lr, \"model\", signature=signature)"
    ]
   },
   {
