--- a/examples/h2o/random_forest.ipynb
+++ b/examples/h2o/random_forest.ipynb
@@ -94,6 +94,7 @@
     "import mlflow\n",
     "import mlflow.h2o\n",
     "from h2o.estimators.random_forest import H2ORandomForestEstimator\n",
+    "from mlflow.models.signature import infer_signature\n",
     "\n",
     "h2o.init()\n",
     "\n",
@@ -114,6 +115,8 @@
     "        rf = H2ORandomForestEstimator(ntrees=ntrees)\n",
     "        train_cols = [n for n in wine.col_names if n != \"quality\"]\n",
     "        rf.train(train_cols, \"quality\", training_frame=train, validation_frame=test)\n",
+    "        predictions = rf.predict(train)\n",
+    "        signature = infer_signature(train, predictions)\n",
     "\n",
     "        mlflow.log_param(\"ntrees\", ntrees)\n",
     "\n",
@@ -121,7 +124,7 @@
     "        mlflow.log_metric(\"r2\", rf.r2())\n",
     "        mlflow.log_metric(\"mae\", rf.mae())\n",
     "\n",
-    "        mlflow.h2o.log_model(rf, \"model\")"
+    "        mlflow.h2o.log_model(rf, \"model\", signature=signature)"
    ]
   },
   {
