--- a/examples/rapids/mlflow_project/notebooks/rapids_mlflow.ipynb
+++ b/examples/rapids/mlflow_project/notebooks/rapids_mlflow.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "import mlflow\n",
     "import mlflow.sklearn\n",
-    "from mlflow.models.signature import infer_signature\n",
+    "from mlflow.models import infer_signature\n",
     "\n",
     "from cuml.metrics.accuracy import accuracy_score\n",
     "from cuml.preprocessing.model_selection import train_test_split\n",
