--- a/examples/sklearn_elasticnet_wine/train.ipynb
+++ b/examples/sklearn_elasticnet_wine/train.ipynb
@@ -36,7 +36,7 @@
     "    from sklearn.linear_model import ElasticNet\n",
     "\n",
     "    import mlflow\n",
-    "    from mlflow.models.signature import infer_signature\n",
+    "    from mlflow.models import infer_signature\n",
     "    import mlflow.sklearn\n",
     "\n",
     "    import logging\n",
