--- a/examples/transformers/MLFlow_X_HuggingFace_Finetune_a_text_classification_model.ipynb
+++ b/examples/transformers/MLFlow_X_HuggingFace_Finetune_a_text_classification_model.ipynb
@@ -484,6 +484,7 @@
         "    per_device_train_batch_size=8,\n",
         "    per_device_eval_batch_size=8,\n",
         "    logging_steps=8,\n",
+        "    num_train_epochs=3,\n",
         ")\n",
         "\n",
         "# Put things together with a `Trainer` instance.\n",
