Run ruff on notebooks
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/examples/sklearn_elasticnet_wine/train.ipynb
+++ b/examples/sklearn_elasticnet_wine/train.ipynb
@@ -25,21 +25,18 @@
    "source": [
     "# Wine Quality Sample\n",
     "def train(in_alpha, in_l1_ratio):\n",
-    "    import os\n",
+    "    import logging\n",
     "    import warnings\n",
-    "    import sys\n",
     "\n",
-    "    import pandas as pd\n",
     "    import numpy as np\n",
-    "    from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "    from sklearn.model_selection import train_test_split\n",
+    "    import pandas as pd\n",
     "    from sklearn.linear_model import ElasticNet\n",
+    "    from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "    from sklearn.model_selection import train_test_split\n",
     "\n",
     "    import mlflow\n",
-    "    from mlflow.models import infer_signature\n",
     "    import mlflow.sklearn\n",
-    "\n",
-    "    import logging\n",
+    "    from mlflow.models import infer_signature\n",
     "\n",
     "    logging.basicConfig(level=logging.WARN)\n",
     "    logger = logging.getLogger(__name__)\n",
@@ -96,7 +93,7 @@
     "        (rmse, mae, r2) = eval_metrics(test_y, predicted_qualities)\n",
     "\n",
     "        # Print out metrics\n",
-    "        print(\"Elasticnet model (alpha=%f, l1_ratio=%f):\" % (alpha, l1_ratio))\n",
+    "        print(f\"Elasticnet model (alpha={alpha:f}, l1_ratio={l1_ratio:f}):\")\n",
     "        print(\"  RMSE: %s\" % rmse)\n",
     "        print(\"  MAE: %s\" % mae)\n",
     "        print(\"  R2: %s\" % r2)\n",
