add hyperparam tuning guide
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/source/tutorials/introductory/logging-first-model/notebooks/logging-first-model.ipynb
+++ b/docs/source/tutorials/introductory/logging-first-model/notebooks/logging-first-model.ipynb
@@ -119,21 +119,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_description = (\"This is the grocery forecasting project. \" \n",
-    "                          \"This experiment contains the produce models for apples.\")\n",
+    "experiment_description = (\n",
+    "    \"This is the grocery forecasting project. \"\n",
+    "    \"This experiment contains the produce models for apples.\"\n",
+    ")\n",
     "\n",
     "experiment_tags = {\n",
     "    \"project_name\": \"grocery-forecasting\",\n",
     "    \"store_dept\": \"produce\",\n",
     "    \"team\": \"stores-ml\",\n",
     "    \"project_quarter\": \"Q3-2023\",\n",
-    "    \"mlflow.note.content\": experiment_description\n",
+    "    \"mlflow.note.content\": experiment_description,\n",
     "}\n",
     "\n",
-    "produce_apples_experiment = client.create_experiment(\n",
-    "    name=\"Apple_Models\",\n",
-    "    tags=experiment_tags\n",
-    ")"
+    "produce_apples_experiment = client.create_experiment(name=\"Apple_Models\", tags=experiment_tags)"
    ]
   },
   {
@@ -225,9 +224,7 @@
     "from datetime import datetime, timedelta\n",
     "\n",
     "\n",
-    "def generate_apple_sales_data_with_promo_adjustment(\n",
-    "    base_demand: int = 1000, n_rows: int = 5000\n",
-    "):\n",
+    "def generate_apple_sales_data_with_promo_adjustment(base_demand: int = 1000, n_rows: int = 5000):\n",
     "    \"\"\"\n",
     "    Generates a synthetic dataset for predicting apple sales demand with seasonality and inflation.\n",
     "\n",
@@ -269,9 +266,7 @@
     "    )\n",
     "\n",
     "    # Introduce inflation over time (years)\n",
-    "    df[\"inflation_multiplier\"] = (\n",
-    "        1 + (df[\"date\"].dt.year - df[\"date\"].dt.year.min()) * 0.03\n",
-    "    )\n",
+    "    df[\"inflation_multiplier\"] = 1 + (df[\"date\"].dt.year - df[\"date\"].dt.year.min()) * 0.03\n",
     "\n",
     "    # Incorporate seasonality due to apple harvests\n",
     "    df[\"harvest_effect\"] = np.sin(2 * np.pi * (df[\"month\"] - 3) / 12) + np.sin(\n",
@@ -307,14 +302,12 @@
     "\n",
     "    # Add previous day's demand\n",
     "    df[\"previous_days_demand\"] = df[\"demand\"].shift(1)\n",
-    "    df[\"previous_days_demand\"].fillna(\n",
-    "        method=\"bfill\", inplace=True\n",
-    "    )  # fill the first row\n",
+    "    df[\"previous_days_demand\"].fillna(method=\"bfill\", inplace=True)  # fill the first row\n",
     "\n",
     "    # Drop temporary columns\n",
     "    df.drop(columns=[\"inflation_multiplier\", \"harvest_effect\", \"month\"], inplace=True)\n",
     "\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -688,7 +681,7 @@
     "# Sets the current active experiment to the \"Apple_Models\" experiment and returns the Experiment metadata\n",
     "apple_experiment = mlflow.set_experiment(\"Apple_Models\")\n",
     "\n",
-    "# Define a run name for this iteration of training. \n",
+    "# Define a run name for this iteration of training.\n",
     "# If this is not set, a unique name will be auto-generated for your run.\n",
     "run_name = \"apples_rf_test\"\n",
     "\n",
@@ -729,13 +722,12 @@
     "        \"min_samples_leaf\": 4,\n",
     "        \"bootstrap\": True,\n",
     "        \"oob_score\": False,\n",
-    "        \"random_state\": 888\n",
+    "        \"random_state\": 888,\n",
     "    }\n",
-    "    \n",
+    "\n",
     "    # Train the RandomForestRegressor\n",
     "    rf = RandomForestRegressor(**params)\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Fit the model on the training data\n",
     "    rf.fit(X_train, y_train)\n",
     "\n",
@@ -747,27 +739,18 @@
     "    mse = mean_squared_error(y_val, y_pred)\n",
     "    rmse = np.sqrt(mse)\n",
     "    r2 = r2_score(y_val, y_pred)\n",
-    "    \n",
+    "\n",
     "    # Assemble the metrics we're going to write into a collection\n",
-    "    metrics = {\n",
-    "        \"mae\": mae,\n",
-    "        \"mse\": mse,\n",
-    "        \"rmse\": rmse,\n",
-    "        \"r2\": r2\n",
-    "    }\n",
-    "        \n",
+    "    metrics = {\"mae\": mae, \"mse\": mse, \"rmse\": rmse, \"r2\": r2}\n",
+    "\n",
     "    # Log the parameters used for the model fit\n",
     "    mlflow.log_params(params)\n",
-    "    \n",
+    "\n",
     "    # Log the error metrics that were calculated during validation\n",
     "    mlflow.log_metrics(metrics)\n",
-    "    \n",
+    "\n",
     "    # Log an instance of the trained model for later use\n",
-    "    mlflow.sklearn.log_model(\n",
-    "        sk_model=rf,\n",
-    "        input_example=X_val,\n",
-    "        artifact_path=artifact_path\n",
-    "    )"
+    "    mlflow.sklearn.log_model(sk_model=rf, input_example=X_val, artifact_path=artifact_path)"
    ]
   },
   {
